apps/authorization-server/overlays/cloud/image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-server
  namespace: authorization
spec:
  template:
    spec:
      containers:
        - name: authorization-server
          image: ghcr.io/dmgiangi/calcifer-authorization-server@sha256:534a2841b75ed6d70aa81d10d13713a53b71d47f2c20679b81d4627d6a13f92a
